--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-native": "0.79.6",
     "react-native-appwrite": "^0.12.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.17.4",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "5.4.0",
@@ -46,6 +47,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/react": "~19.0.10",
+    "@types/react-native-onboarding-swiper": "^1.1.9",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~9.2.0",
     "typescript": "~5.8.3"
